@startuml ClassDiagram_AppCore
skinparam defaultFontName Monospaced
skinparam shadowing false
skinparam linetype ortho
skinparam packageBackgroundColor #f9f9f9
skinparam packageBorderColor #aaaaaa
skinparam packageFontColor #666666
skinparam packageFontStyle bold
skinparam class {
  BackgroundColor<<interface>> #dae8fc
  BorderColor<<interface>>     #6c8ebf
  FontStyle<<interface>>       italic
  BackgroundColor<<abstract>>  #e1d5e7
  BorderColor<<abstract>>      #9673a6
  FontStyle<<abstract>>        italic
  BackgroundColor<<concrete>>  #fff2cc
  BorderColor<<concrete>>      #d6b656
  BackgroundColor<<manager>>   #d5e8d4
  BorderColor<<manager>>       #82b366
  BackgroundColor<<utility>>   #f5f5f5
  BorderColor<<utility>>       #666666
  FontColor<<utility>>         #333333
}
hide <<utility>> stereotype

package "Application core" {
  interface IGraphicsApp <<interface>> {
    + Init() : bool
    + Update(in info : SUpdateInfo) : void
    + Render() : void
    + RenderGUI() : void
    + Clean() : void
    + KeyboardDown(in e : SDL_KeyboardEvent) : void
    + KeyboardUp(in e : SDL_KeyboardEvent) : void
    + MouseMove(in e : SDL_MouseMotionEvent) : void
    + MouseDown(in e : SDL_MouseButtonEvent) : void
    + MouseUp(in e : SDL_MouseButtonEvent) : void
    + MouseWheel(in e : SDL_MouseWheelEvent) : void
    + Resize(in w : int, in h : int) : void
    + OtherEvent(in e : SDL_Event) : void
  }
  class MyApp <<concrete>> {
    - m_lsTech : LinearSearch* = nullptr
    - m_csmTech : ConeStepMapping* = nullptr
    # m_windowSize : ivec2
    # m_elapsedTime : float
    # m_showAxes : bool = true
    # m_selectedIndex : int = -1
    # m_activeHeightmapIdx : int = 0
    # m_objLoadFailed : bool = false
    # m_lightDir : vec3
    # m_interpHeight : bool = true
    # m_interpCone : bool = false
    # m_conservative : bool = false
    # m_heightMaps : const vector<string>
    --
    + Init() : bool
    + Update(in info : SUpdateInfo) : void
    + Render() : void
    + RenderGUI() : void
    + Clean() : void
    # SetupDebugCallback() : void
    # InitDebugSSBOs() : void
    # CleanupDebugSSBOs() : void
    # RenderDebugPanel() : void
    # ExportDebugLog() : void
    # UpdateTechniquePrograms() : void
    # CreateDefaultRayMarchedModel(in name : string) : shared_ptr<RayMarchedModel>
    # CreateModelFromOBJ(in path : string) : shared_ptr<Model>
  }
}

class CommandQueue <<manager>> {
}
class SceneManager <<manager>> {
}
class ShaderManager <<manager>> {
}
class MaterialManager <<manager>> {
}
class TextureManager <<manager>> {
}
class SkyboxRenderer <<manager>> {
}
class AxesRenderer <<manager>> {
}
class OpenGLRendererVisitor <<manager>> {
}
class DebugRenderer <<manager>> {
}
class ImGuiVisitor <<concrete>> {
}
class Camera <<concrete>> {
}
class CameraManipulator <<utility>> {
}
class ConemapGenerator <<utility>> {
}
class RayMarchDebugState <<utility>> {
}
interface IRayMarchingTechnique <<interface>> {
}


MyApp ..|> IGraphicsApp
MyApp *-- "# m_commandQueue"        CommandQueue
MyApp *-- "# m_sceneManager"        SceneManager
MyApp *-- "# m_shaderManager"       ShaderManager
MyApp *-- "# m_materialManager"     MaterialManager
MyApp *-- "# m_textureManager"      TextureManager
MyApp *-- "# m_skyboxRenderer"      SkyboxRenderer
MyApp *-- "# m_axesRenderer"        AxesRenderer
MyApp *-- "# m_rendererVisitor"     OpenGLRendererVisitor
MyApp *-- "# m_conemapGenerator"    ConemapGenerator
MyApp *-- "# m_debugRenderer"       DebugRenderer
MyApp *-- "# m_imguiVisitor"        ImGuiVisitor
MyApp *-- "# m_camera"              Camera
MyApp *-- "# m_cameraManipulator"   CameraManipulator
MyApp *-- "# m_debugState"          RayMarchDebugState
MyApp o-- "# m_techniques\n0..*"    IRayMarchingTechnique
@enduml
